# Add this marking for Rudra.
cargo-features = ["edition2021"]

[package]
name = "active_standby"
version = "2.0.0"
authors = ["Matan Markind <matan.markind@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A concurrency primitive for high concurrency reads."
repository = "https://github.com/matanmarkind/active_standby"
readme = "README.md"
exclude = ["benches/records/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4.3"
more-asserts = "0.2.1"
parking_lot = "0.12.1"

[dev-dependencies]
maplit = "1.0.2"

[target.'cfg(loom)'.dependencies]
loom = "0.5.2"
